--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -81,7 +81,7 @@
         <div class="uk-width-1-1 uk-margin-remove uk-align-center uk-text-break uk-padding" id="page-background">
             <h2 id="page-title">{{ title }}</h2>
             <div class="img">
-                <img src="static/img/super.jpg" width="200px" class="img"></img>
+                <img src="static/img/turismo.jpg" width="200px" class="img"></img>
             </div>
             <h3 id="page-title" class="user">Bienvenido a la Tienda Online: {{ user.first_name }}</h3>
             {{{body}}}
